Updated .travis.yml and .swift-version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-notifications:
-  slack: zewo:VjyVCCQvTOw9yrbzQysZezD1
 os:
   - linux
-  - osx
-language: generic
-sudo: required
 dist: trusty
-osx_image: xcode7.3
+sudo: required
+language: generic
 install:
-  - eval "$(curl -sL https://raw.githubusercontent.com/Zewo/Zewo/5254525d9da56df29346fd76e99529c22034d61d/Scripts/install-swiftenv.sh)"
+  - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/9f442512a46d7a2af7b850d65a7e9bd31edfb09b/swiftenv-install.sh)"
 script:
   - swift build
   - swift build -c release
